@@ -1,6 +1,8 @@
 Revision history for MooX-Failover
 
 {{$NEXT}}
+  [Other Changes]
+  - Fixed tests to work with Moo v1.001000 or earlier.
 
 v0.3.1    2014-12-22 15:10:27+00:00 Europe/London
   [Documentation]
